[metadata]
name = YT_DOWNLOADER
version = 1.0.2
description = basic interface for downloading audio from yt videos
author = FranchoPlz
url = https://github.com/FranchoPlz/YT_AudioDownloader
install_requires=
    PyQt5
    youtube_dl
    pafy

[options]
include_package_data = True
packages = find:

[options.entry_points]
console_scripts =
    yt_downloader = yt_audio_downloader_module.app:main
